Fixed css reference (no visible change)
Fixed a css reference pointing to the main wrapping element of the UI
that gets inserted. There's no discernible difference at the moment.

--- a/popup.css
+++ b/popup.css
@@ -7,8 +7,8 @@
     border-color: #c1c2c0;
     background-color: #f0f0f0
 }
-.popup-html{
-    font-family: Roboto, Arial, sans-serif;
+.yjt-html{
+    font-family: 'Roboto', Arial, sans-serif;
 }
 #control-html{
     width: 100%;
